--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,5 @@
 @import url(/styles/utility-new.css);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css);
 :root {
   --wishlist-color: #ff0000;
 }
