--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,7 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css);
 :root {
   --wishlist-color: #ff0000;
+  --clear-filter: #0000ff;
 }
 
 .hero-image {
