--- a/styles/utility-new.css
+++ b/styles/utility-new.css
@@ -5,6 +5,18 @@
   margin-top: 8rem;
 }
 
+.ml-32 {
+  margin-left: 8rem;
+}
+
+.ml-64 {
+  margin-left: 16rem;
+}
+
+.ml-128 {
+  margin-left: 32rem;
+}
+
 .flex {
   display: flex;
 }
@@ -15,4 +27,28 @@
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-7 {
+  width: 1.75rem;
+}
+
+.w-11 {
+  width: 2.75rem;
 }
